# msglen

./: .gitignore  Makefile  README.org  README.txt  plugin.py  pyproject.toml  requirements.txt  setup.py  tox.ini
debian/: README.source  changelog  control  copyright  rules
debian/patches/: 0001-Install-wheel-not-source.patch  series
msglen/: __init__.py  __main__.py  cmdline.py  log.py  msglen.py  stdinreader.py
tests/: test_cmdline.sh  test_flags.py  test_msglen.py  test_protocols.py  test_speed.py
