[project]
name = "msglen"
authors = [
  { name="Johannes Willkomm", email="jwillkomm@ai-and-it.de" },
]
description = "Simple Binary Stream Messages"
# readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['js2x']
dynamic = ["version"]

[project.optional-dependencies]
build = ["build"]
test = ["pytest", "tox"]
all = ["build", "pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/aiandit/msglen"
"Bug Tracker" = "https://github.com/aiandit/msglen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
msgl = "msglen.cmdline:run"

[tool.hatch.version]
path = "msglen/__init__.py"

#[tool.hatch.build.hooks.custom]
#path="plugin.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path="plugin.py"
